--- a/app/views/group/tasks/_form.html.erb
+++ b/app/views/group/tasks/_form.html.erb
@@ -4,10 +4,11 @@ $(document).ready(function() {
 });
 </script>
 <div class="post_form">
-	<%= simple_form_for [@current_group, @post], :remote => true, :html => {:id => "post_form", :class => 'form-horizontal', :data => {:type=>"script", :"method"=>"post"}} do |f| -%>	
+	<%= simple_form_for @task, :html => {:id => "post_form", :class => 'form-horizontal'} do |f| -%>	
 	<%= render 'shared/error_messages', :object => f.object %>
+	<%= f.input :title, :label => "title" %>
 	<%= f.input :body, :label => "Body", :input_html => { :width => 120, :height => 30, :id => "input_post" } %>
-	<div class="actions">
+	<div class="form-actions">
 		<%= f.submit "发布", :class=>'btn btn-primary'%>
 		&nbsp;
 		<button class="btn" type="reset">保存为草稿</button>
