--- a/app/views/group/questions/_question.html.erb
+++ b/app/views/group/questions/_question.html.erb
@@ -1,20 +1,26 @@
 <div class='clearfix post-list'>
-	<div class='star'>
+
+	<div class='user'>
+		<%= image_tag question.user.avatar_url(:s) || "http://placehold.it/50x50" %>
+		<p><%= question.user.name %></p>
+	</div>
+	
+	<div class='content'>
+		<h4><%= link_to(question.title, group_question_path(@current_group, question)) %></h4>
+		<div class="entrybody">
+			<%= truncate(question.body, :length => 180, :omission => '......') %>
+		</div>
+	</div>
+
+	
+	<div class='clearfix'>
 		<table width='99%'>
-			<tr>
-				<td>
-					支持
-				</td>
-				<td>
-					<span class="label label-success"><%= question.vote_points %></span> 
-				</td>
-			</tr>
 			<tr>
 				<td>
 					回答
 				</td>
 				<td>
-					<span class="label label-warning"><%= question.answers_count %></span>
+					<span class="label label-warning"><%= question.comments_count %></span>
 				</td>
 			</tr>
 			<tr>
@@ -35,16 +41,5 @@
 			</tr>
 		</table>
 		<p></p>
-	</div>
-	<div class='content'>
-		<h4><%= link_to(question.title, question_path(question)) %></h4>
-		<div class="entrybody">
-			<%= truncate(question.body, :length => 180, :omission => '......') %>
-		</div>
-	</div>
-
-	<div class='user'>
-		<%= image_tag question.user.avatar_url(:s) if question.user %>
-		<p><%= question.user.login %></p>
 	</div>
 </div>
