--- a/app/views/groups/_profile.html.erb
+++ b/app/views/groups/_profile.html.erb
@@ -1,7 +1,7 @@
 <table>
 	<tr>
 		<td>
-			<%= image_tag @current_group.logo_url(:m) || "http://placehold.it/100x100" %>
+			<%= image_tag @current_group.logo_url(:m) || "default_group.gif" %>
 		</td>
 	</tr>
 	<tr>
@@ -15,11 +15,11 @@
 <br />
 <div class="tab">
 	<%= tabs_tag(:namespace => :group_actions, :open_tabs => {:id => "group_menus", :class => "nav nav-pills" }, :builder => MenuTabBuilder) do |tab| %>
-	  <%= tab.topic raw("<i class='icon-edit'></i> #{t("Write Topic")}"), new_group_topic_path(@current_group) %>
-	  <%= tab.photo raw("<i class='icon-camera''></i> #{t("Add Photo")}"), new_group_photo_path(@current_group) %>	
-	  <%= tab.document raw("<i class='icon-folder-open'></i> #{t("Create Document")}"), new_group_document_path(@current_group) %>	
-	  <%= tab.task raw("<i class='icon-tasks'></i> #{t("Create Task")}"), new_group_task_path(@current_group) %>
-	  <%= tab.question raw("<i class='icon-question-sign'></i> #{t("Create Question")}"), new_group_question_path(@current_group) %>	
-	  <%= tab.event raw("<i class='icon-bullhorn'></i> #{t("Publish Event")}"), new_group_event_path(@current_group) %>	
+	  <%= tab.post raw("<i class='icon-edit'></i> 添加话题"), new_group_post_path(@current_group) %>
+	  <%= tab.photo raw("<i class='icon-camera''></i> 添加相册"), new_group_photo_path(@current_group) %>	
+	  <%= tab.document raw("<i class='icon-folder-open'></i> 上传课件"), new_group_document_path(@current_group) %>	
+	  <%= tab.task raw("<i class='icon-tasks'></i> 发布作业"), new_group_task_path(@current_group) %>
+	  <%= tab.question raw("<i class='icon-question-sign'></i> 新建问题"), new_group_question_path(@current_group) %>	
+	  <%= tab.event raw("<i class='icon-bullhorn'></i> 邀请成员"), new_group_event_path(@current_group) %>	
 	<% end %>
 </div>
