--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,4 +6,36 @@
 .support .android{background-position:-80px 0;}
 .support .window{background-position:-120px 0;}
 .support .ipad:hover,.support .iphone:hover, .support .android:hover, .support .window:hover{background-position-y: -40px;}
+.info{
+	padding:0px;
+	display:block;	
+	margin-bottom: 5px;
+}
+.info li{
+	margin-top: 10px;
+	float:left;
+	clear:both;
+}
+ul{list-style: none;}
 
+.feature.scala:after {
+    border-right-color: #7AC9DE;
+}
+.feature:after {
+    border-bottom: 50px solid transparent;
+    border-left: 50px solid transparent;
+    border-right: 50px solid #0080B0;
+    content: "";
+    height: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0;
+}
+.feature .grid-1 {
+    width: 220px;
+}
+li.feature {
+    height: 250px;
+}
