--- a/app/views/layouts/_assets.html.erb
+++ b/app/views/layouts/_assets.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'tree', :media => :all %>
 <%= stylesheet_link_tag 'sortable', :media => :all %>
 <%= stylesheet_link_tag 'comments_tree', :media => :all %>
-<%= stylesheet_link_tag "application", :media => "all" %>
+<%= stylesheet_link_tag "application", :media => :all %>
 <%= stylesheet_link_tag  'title', 'the_sortable_tree',   :media => :all %>
 
 <%= javascript_include_tag "application" %>
