--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -80,7 +80,31 @@ li.feature {
 .marketing{
 	float:left;
 	margin-left:15px;
-	width: 310px;
+	width: 150px;
+}
+
+.bs-docs-sidenav.affix {
+    top: 40px;
+}
+.bs-docs-sidenav {
+    width: 138px;
+}
+.bs-docs-sidenav {
+    background-color: #FFFFFF;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 30px;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    width: 108px;
 }
 
 #footer {
