--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,6 +30,10 @@ body {
 //
 // Example:
 
+.container, .navbar-fixed-top .container, .navbar-fixed-bottom .container, .span12 {
+    width: 960px;
+}
+
 @linkColor: #ff0000;
 [class*="span"] {
     float: left;
@@ -42,7 +46,7 @@ h3 {
 }
 
 .navbar-inner {
-	background-color: #333;
+    background-color: #333;
     background-image: -moz-linear-gradient(center top , #666, #333);
 }
 
