--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,15 @@
+body {
+    padding-top: 70px;
+    font-family: Tahoma,Verdana;
+    font: 12px/162% Arial,Helvetica,sans-serif;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    background-position: -70% 0;
+    background-repeat: repeat;
+    background-size: auto auto;
+}
+
 .support{overflow: auto; font-size:12px; margin:10px 0; color:#999;}
 .support li{float:left; margin-right:20px;text-align: center;}
 .support a{display:block;height:40px;width:40px;background:url("/assets/sup_icon.png") no-repeat;}
