--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,18 @@
 <%= tabs_tag(:namespace => :site_nav, :open_tabs => {:id => "site_nav", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
-  <%= tab.index '首页', root_path %>
-  <%= tab.group '班级', groups_path %>
-  <%= tab.group '班级', groups_path %>
-  <%= tab.group '班级', groups_path %>
-  <%= tab.group '班级', groups_path %>
+	<%= tab.index '首页', groups_path %>
+  <% Grade.list.each do |grade| %>
+    <li class="dropdown">
+      <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+			<%= grade.name %>
+			<b class="caret"></b>
+      </a>
+			<ul class="dropdown-menu">
+      	<% grade.children.each do |child| %>
+      		<%= tab.try "grade_#{child.id}", child.name, child %>
+    			<li class="divider"></li>
+    		<% end %>
+			</ul>
+		</li>	
+	<% end %>	  
 <% end %>
+
