--- a/app/views/groups/_nav.html.erb
+++ b/app/views/groups/_nav.html.erb
@@ -1,7 +1,8 @@
-<div class="tabbable tabs-left">
-<%= tabs_tag(:namespace => :site_nav, :open_tabs => {:id => "group_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
-  <% current_user.groups.each do |group| %>
-    <%= tab.try "group_#{group.id}", group.name, group %>
-  <% end %>
-<% end %>
-</div>
+ <div class="tabbable tabs-left">
+   <%= tabs_tag(:namespace => :group_nav, :open_tabs => {:class => "nav nav-tabs"}, :builder => MenuTabBuilder) do |tab| %>
+   <% current_user.groups.each do |group| %>
+   <%= tab.try("group_#{group.id}", group.name, group) %>
+   <% end %>
+   <li></li>
+   <% end %>
+ </div>
