fix footer style

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div id="footer" class='row'>
 	<span class="fleft gray-link" id="icp">
-		&copy; 2012－2013 welink.im, all rights reserved &nbsp;&nbsp;
+		&copy; 2012－2013 haobanji.com, all rights reserved &nbsp;&nbsp;
 		<a href="http://www.miibeian.gov.cn/"></a>
 	</span>
 
@@ -13,3 +13,8 @@
 	</span>
 
 </div>
+
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa7ea6a1f8e3a074d7f4b4488b67979a5' type='text/javascript'%3E%3C/script%3E"));
+</script>
