--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -121,11 +121,12 @@ li.feature {
 
 #footer {
 	border-top: 1px dashed #DDDDDD;
-	color: #999999;
-	margin-top: 10px;
+	color: #777;
+	margin-top: 12px;
 	overflow: hidden;
 	padding-top: 6px;
 	margin-bottom: 25px;
+	font-size: 12px;
 }
 .fleft {
 	float: left;
