--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,10 @@
 	<h3>注册海学网</h3><br />
 
 	<%= render 'shared/error_messages', :object => f.object %>
-	<%= f.input :email, :required => true, :autofocus => true %>
-	<%= f.input :name, :required => true %>
-	<%= f.input :password, :required => true %>
-	<%= f.input :password_confirmation, :required => true %>
+	<%= f.input :email, :required => true, :autofocus => true, :label => '邮箱' %>
+	<%= f.input :name, :required => true, :label => "姓名" %>
+	<%= f.input :password, :required => true, :label => "密码" %>
+	<%= f.input :password_confirmation, :required => true, :label => "重复密码" %>
 	<div class="form-actions">
 		<%= f.submit :class => "btn btn-primary" %>
 	</div>
