--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,17 @@
-<div class='span-left'>
-	<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal span-form'}) do |f| %>
-	<h3>注册海学网</h3><br />
+<h2>Sign up</h2>
 
-	<%= render 'shared/error_messages', :object => f.object %>
-	<%= f.input :email, :required => true, :autofocus => true, :label => '邮箱' %>
-	<%= f.input :name, :required => true, :label => "昵称" %>
-	<%= f.input :password, :required => true, :label => "密码" %>
-	<%= f.input :password_confirmation, :required => true, :label => "重复密码" %>
-	<div class="form-actions">
-		<%= f.submit :class => "btn btn-primary" %>
-	</div>
-	<% end %>
-</div>
-<div class='span-right'>
-	<%= link_to t('already have one account? login'), new_user_session_path, :class=>'btn' %>
-</div>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= f.error_notification %>
+
+  <div class="form-inputs">
+    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.input :password, :required => true %>
+    <%= f.input :password_confirmation, :required => true %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up" %>
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
