--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -5,7 +5,7 @@
 		</tr>
 		<tr>
 			<td>
-				<p><%= current_user.name %></p>
+				<p><%= current_user.nickname %></p>
 			</td>
 		</tr>
 	</table>
