--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,11 @@
-<div class='span3'>
+<div class='span2'>
 	<%= render 'users/profile' %>
+	<%= render 'users/menu' %>
 </div>
 
-<div class='span9'>
-	<%= render 'users/menu' %>
+<div class='span10'>
+	<div class="tabbable"> 
+		<%= render 'activities/nav' %>
+		<%= render 'activities/list' %>
+	</div>
 </div>
