--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,9 @@
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</a>
-			<%= link_to image_tag("logo.png"), root_path, :class => 'brand' %>
-			<div class="container nav-collapse">
-				<%= render "layouts/nav" %>
-				<%= render "layouts/account" %>
-			</div><!--/.nav-collapse -->
+			<%= link_to "mage_tag('logo.png')", root_path, :class => 'brand' %>
+			<%= render "layouts/nav" %>	
+			<%= render "layouts/account" %>
 		</div>
 	</div>
 </div>
