--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,6 +3,7 @@
   <%= tab.index '分享', posts_path %>
   <%= tab.index '课程', courses_path %>
   <%= tab.index '群组', groups_path %>
+  <%= tab.index '学校', schools_path %>
     <% Grade.list.each do |grade| %>
      <li class="dropdown">
        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
