add post resources for me

--- a/app/views/layouts/me.html.erb
+++ b/app/views/layouts/me.html.erb
@@ -42,6 +42,7 @@
           <%= bootstrap_flash %>
           <div class='span2'>
             <%= render 'users/profile' %>
+            <%= render 'me/actions' %>
             <%= render 'users/menu' %>
           </div>
 
