--- a/app/views/me/posts/edit.html.erb
+++ b/app/views/me/posts/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing me_post</h1>
+<h1>Editing ey_module</h1>
 
-<%= render 'form' %>
+<% form_for(@ey_module) do |f| %>
+  <%= f.error_messages %>
 
-<%= link_to 'Show', @me_post %> |
-<%= link_to 'Back', me_posts_path %>
+  <p>
+    <%= f.submit 'Update' %>
+  </p>
+<% end %>
+
+<%= link_to 'Show', @ey_module %> |
+<%= link_to 'Back', ey_modules_path %>
