--- a/app/views/layouts/me.html.erb
+++ b/app/views/layouts/me.html.erb
@@ -13,7 +13,10 @@
     <![endif]-->
 
     <%= stylesheet_link_tag "application", :media => "all" %>
-
+    <!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <%= javascript_include_tag "application" %>
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
     <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
@@ -33,6 +36,7 @@
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
   </head>
   <body>
 
@@ -42,8 +46,7 @@
           <%= bootstrap_flash %>
           <div class='span2'>
             <%= render 'users/profile' %>
-            <%= render 'me/actions' %>
-            <%= render 'users/menu' %>
+            <%= render 'me/menu' %>
           </div>
 
           <div class='span10'>
@@ -57,10 +60,7 @@
 
     </div> <!-- /container -->
 
-    <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
+    
 
   </body>
 </html>
