--- a/app/views/me/posts/new.html.erb
+++ b/app/views/me/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New me_post</h1>
+<%= render 'nav' %>
 
-<%= render 'form' %>
+<%= render "me/posts/forms/#{@kind}" %>
 
-<%= link_to 'Back', me_posts_path %>
