--- a/app/views/me/posts/_nav.html.erb
+++ b/app/views/me/posts/_nav.html.erb
@@ -5,7 +5,12 @@
 		创建 <b class="caret"></b>
 	</a>
 	<ul class="dropdown-menu">
-		<li> <%= link_to "新建笔记", new_me_post_path(:type => Settings.post[:note]) %> </li>
+		<li> <%= link_to "新建笔记", new_me_note_path %> </li>
+		<li> <%= link_to "新建相册", new_me_album_path %> </li>
+		<li> <%= link_to "新建文档", new_me_document_path %> </li>
+		<li> <%= link_to "新建视频", new_me_video_path %> </li>
+		<li> <%= link_to "新建音频", new_me_audio_path %> </li>
+		<li> <%= link_to "新建书签", new_me_bookmark_path %> </li>
 	</ul>
   </li>
 <% end %>
