make jquery file upload work

--- a/app/views/assets/_fileupload.html.erb
+++ b/app/views/assets/_fileupload.html.erb
@@ -1,11 +1,13 @@
-<%= form_for Asset.new, :url => url, :method => :post, :html => { :multipart => true, :id => "fileupload" } do |f| %>
+<div class="container">
+  <h2>Upload file</h2>
+  <%= form_for Asset.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
     <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
     <div class="row fileupload-buttonbar">
-      <div class="span">
+      <div class="span7">
         <!-- The fileinput-button span is used to style the file input field as button -->
         <span class="btn btn-success fileinput-button">
           <i class="icon-plus icon-white"></i>
-          <span>添加文件...</span>
+          <span>Add files...</span>
           <%= f.file_field :file %>
         </span>
         <button type="submit" class="btn btn-primary start">
@@ -22,7 +24,7 @@
         </button>
         <input type="checkbox" class="toggle">
       </div>
-      <div class="span">
+      <div class="span5">
         <!-- The global progress bar -->
         <div class="progress progress-success progress-striped active fade">
           <div class="bar" style="width:0%;"></div>
@@ -57,9 +59,7 @@
     <td class="name"><span>{%=file.name%}</span></td>
     <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
     {% if (file.error) { %}
-    <td class="error" colspan="2">
-        <span class="label label-important">{%=locale.fileupload.error%}</span> 
-        {%=locale.fileupload.errors[file.error] || file.error%}</td>
+    <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
     {% } else if (o.files.valid && !i) { %}
     <td>
       <div class="progress progress-success progress-striped active"><div class="bar" style="width:0%;"></div></div>
@@ -116,13 +116,16 @@
   $(function () {
       // Initialize the jQuery File Upload widget:
       $('#fileupload').fileupload();
-      // 
+      console.log($('#fileupload').data());
+
       // Load existing files:
       $.getJSON($('#fileupload').prop('action'), function (files) {
-        var fu = $('#fileupload').data('fileupload'), template;
+        var fu = $('#fileupload').data('fileupload'), 
+          template;
         fu._adjustMaxNumberOfFiles(-files.length);
         console.log(files);
-        template = fu._renderDownload(files).appendTo($('#fileupload .files'));
+        template = fu._renderDownload(files)
+          .appendTo($('#fileupload .files'));
         // Force reflow:
         fu._reflow = fu._transition && template.length &&
           template[0].offsetWidth;
