--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,8 @@
-<h3>公告</h3>
-<h3>课程表</h3>
+<div class='left'>
+	<%= render 'groups/nav' %>
+</div>
+
+<div class='right'>
+	<%= image_tag @group.logo.url(:m) %>
+</div>
 
