--- a/app/views/me/documents/new.html.erb
+++ b/app/views/me/documents/new.html.erb
@@ -1,5 +1,5 @@
 <%= render 'me/posts/nav' %>
 
-<%# render 'form' %>
+<%= render 'form' %>
 <%= render "assets/fileupload" %>
 <%= link_to 'Back', me_documents_path %>
