--- a/app/views/me/index.html.erb
+++ b/app/views/me/index.html.erb
@@ -1,4 +1,12 @@
-<div class="tabbable"> 
-	<%= render 'me/activities/nav' %>
-	<%= render 'me/activities/list' %>	
+<div class='left'>
+  <div class="tabbable"> 
+    <%= render 'me/activities/nav' %>
+    <%= render 'me/activities/list' %>  
+  </div>
+          
+</div>
+
+<div class='right'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
 </div>
