--- a/app/views/me/posts/_nav.html.erb
+++ b/app/views/me/posts/_nav.html.erb
@@ -10,7 +10,7 @@
 		<li> <%= link_to "新建文档", new_me_document_path %> </li>
 		<li> <%= link_to "新建视频", new_me_video_path %> </li>
 		<li> <%= link_to "新建音频", new_me_audio_path %> </li>
-		<li> <%= link_to "新建书签", new_me_bookmark_path %> </li>
+		<li> <%= link_to "新建书签", new_me_link_path %> </li>
 	</ul>
   </li>
 <% end %>
