--- a/app/views/me/notes/show.html.erb
+++ b/app/views/me/notes/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-
-<%= link_to 'Edit', edit_me_note_path(@me_note) %> |
+<%= render 'me/posts/nav' %>
+<h3><%= @post.title%></h3>
+<p>
+	<%= @post.body %>
+</p>
+<%= link_to 'Edit', edit_me_note_path(@post) %> |
 <%= link_to 'Back', me_notes_path %>
