--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,15 @@
-<h1>Listing ey_modules</h1>
+<div class='span7'>  
+  <% @posts.each do |post| %>
+	<article>
+    <header>
+        <h2><%= post.title %></h2>
+        <time datetime="2010-05-24" pubdate="pubdate"><%= post.created_at %></time>
+    </header>
+    <p><%= post.body %></p>
+	</article>
+  <% end %>
+</div>
+<div class='span2'>
 
-<table>
-  <tr>
-  </tr>
+</div>
 
-<% @ey_modules.each do |ey_module| %>
-  <tr>
-    <td><%= link_to 'Show', ey_module %></td>
-    <td><%= link_to 'Edit', edit_ey_module_path(ey_module) %></td>
-    <td><%= link_to 'Destroy', ey_module, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New ey_module', new_ey_module_path %>
