--- a/app/views/me/notes/new.html.erb
+++ b/app/views/me/notes/new.html.erb
@@ -1,5 +1,6 @@
-<%= render 'me/posts/nav' %>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', me_notes_path %>
+<div class='left'>
+</div>
+<div class='right'>
+  <%= render 'me/posts/nav' %>
+  <%= render 'form' %>
+</div>
