--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
-<div class='span7'>  
+<div class='left'>
+
+</div>
+<div class='right'>  
   <% @posts.each do |post| %>
 	<article>
     <header>
@@ -9,7 +12,5 @@
 	</article>
   <% end %>
 </div>
-<div class='span2'>
 
-</div>
 
