--- a/app/views/me/notes/show.html.erb
+++ b/app/views/me/notes/show.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"><%= notice %></p>
+<div class='left'>
 
-<%= render 'me/posts/nav' %>
-<h3><%= @post.title%></h3>
-<p>
-	<%= @post.body %>
-</p>
-<%= link_to 'Edit', edit_me_note_path(@post) %> |
-<%= link_to 'Back', me_notes_path %>
+</div>
+<div class='right'>
+  <%= render 'me/posts/nav' %>
+  <h3><%= @post.title%></h3>
+  <p>
+	 <%= @post.body %>
+  </p>
+</div>
