--- a/app/views/me/posts/index.html.erb
+++ b/app/views/me/posts/index.html.erb
@@ -1,3 +1,7 @@
 <div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
   <%= render 'me/posts/nav' %>
 </div>
