--- a/app/views/me/posts/_nav.html.erb
+++ b/app/views/me/posts/_nav.html.erb
@@ -1,5 +1,6 @@
-<%= tabs_tag(:namespace => :post_menus, :open_tabs => { :id => "post_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
+<%= tabs_tag(:namespace => :post_nav, :open_tabs => { :id => "post_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.home raw("所有分享"), me_activities_path %>
+  <%= tab.category raw("分类管理"), manage_me_categories_path %>
   <li class="dropdown">
 	<a class="dropdown-toggle" data-toggle="dropdown" href="#">	
 		创建 <b class="caret"></b>
