--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,8 @@
 </div>
 <div class='right'>
   <h4><%= @course.name %></h4>
-<p id="notice"><%= notice %></p>
+  <%= render 'nav' %>
+  <p id="notice"><%= notice %></p>
 
 
 </div>
