--- a/app/views/me/categories/manage.html.haml
+++ b/app/views/me/categories/manage.html.haml
@@ -4,3 +4,6 @@
 .right
   %ol.sortable_tree{ :data => { :max_levels => 3, :rebuild_url => rebuild_me_categories_url } }
     = build_server_tree @categories, :type => :sortable
+/  %ol.sortable_tree{ :data => { :max_levels => 3, :rebuild_url => rebuild_me_categories_url } }
+/    = build_server_tree @categories, :type => :sortable
+  
