--- a/app/views/assets/_fileupload.html.erb
+++ b/app/views/assets/_fileupload.html.erb
@@ -8,7 +8,7 @@
         <span class="btn btn-success fileinput-button">
           <i class="icon-plus icon-white"></i>
           <span>Add files...</span>
-          <%= f.file_field :file %>
+          <%= f.file_field :upload %>
         </span>
         <button type="submit" class="btn btn-primary start">
           <i class="icon-upload icon-white"></i>
@@ -120,19 +120,18 @@
 
       // Load existing files:
       $.getJSON($('#fileupload').prop('action'), function (files) {
-        //var fu = $('#fileupload').data('fileupload'), template;
-        var fu = $('.app_form').data('blueimpFileupload'), template;
+        var fu = $('#fileupload').data('fileupload'), template;
+        //var fu = $('.app_form').data('blueimpFileupload'), template;
         fu._adjustMaxNumberOfFiles(-files.length);
 
         console.log(files);
-        template = fu._renderDownload(files)
-          .appendTo($('#fileupload .files'));
+        //template = fu._renderDownload(files).appendTo($('#fileupload .files'));
         // Force reflow:
-        fu._reflow = fu._transition && template.length &&
-          template[0].offsetWidth;
-        template.addClass('in');
+        //fu._reflow = fu._transition && template.length &&
+        //template[0].offsetWidth;
+        //template.addClass('in');
         $('#loading').remove();
       });
-
+  
   });
 </script>
