--- a/app/views/me/notes/new.html.erb
+++ b/app/views/me/notes/new.html.erb
@@ -1,6 +1,8 @@
 <div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
 </div>
 <div class='right'>
   <%= render 'me/posts/nav' %>
-  <%= render 'form' %>
+  <%# render 'form' %>
 </div>
