--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,15 +2,14 @@
 
 </div>
 <div class='right'>  
-  <% @posts.each do |post| %>
-	<article>
-    <header>
-        <h2><%= post.title %></h2>
-        <time datetime="2010-05-24" pubdate="pubdate"><%= post.created_at %></time>
-    </header>
-    <p><%= post.body %></p>
-	</article>
-  <% end %>
+  <section class='posts'>
+    <%- if @posts.any? %>
+      <%= render @posts %>
+      <%= paginate @posts %>
+    <%- else %>
+      p No posts yet.
+    <% end %>
+  </section>
 </div>
 
 
