--- a/app/views/me/posts/index.html.erb
+++ b/app/views/me/posts/index.html.erb
@@ -4,4 +4,12 @@
 </div>
 <div class='right'>
   <%= render 'me/posts/nav' %>
+  <div id='user-page-post-list'>
+    <div class='left'>
+    </div>
+
+    <div class='right'>
+    </div>
+
+  </div>
 </div>
